--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Git</title>
+    <title>Document Git home</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae velit illo animi, nisi sequi qui impedit, sed similique nesciunt aliquam, iusto voluptate veniam illum obcaecati. Earum nesciunt hic temporibus nisi.</p>
 </body>
 </html>
