--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document Git home</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae velit illo animi, nisi sequi qui impedit, sed similique nesciunt aliquam, iusto voluptate veniam illum obcaecati. Earum nesciunt hic temporibus nisi.</p>
+    <p>Lorem  adipisicing elit. Molestiae velit illo animi, nisi sequi qui impedit, sed similique nesciunt aliquam, iusto voluptate veniam illum obcaecati. Earum nesciunt hic temporibus nisi.</p>
 </body>
 </html>
