--- a/user.html
+++ b/user.html
@@ -3,13 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document </title>
+    <title>User</title>
 </head>
 <body>
-    <h1>heading/h1>
-    <p>helo</p>
-    <p>Hi</p>
-    <button>Submit</button>
-   
+    
 </body>
 </html>
